# modbus_go_full

./: DESIGN.md  FILERECORD_TEST_GUIDE.md  LICENSE  README.md  build.sh  client.go  comprehensive_test  endianness.go  errors.go  go.mod  modbus.go  protocol.go  rtu_client.go  rtu_example  tcp_client.go  tcp_example  types.go
docs/: DESIGN.md  FILERECORD_TEST_GUIDE.md
example/: comprehensive_example.go  rtu_example.go
example/go/: build.sh  comprehensive_example.go  tcp_example.go
example/python/modbus_slave_full/: FILE_RECORDS_GUIDE.md  FILE_RECORDS_IMPLEMENTATION.md  IMPLEMENTATION.md  LICENSE  PROJECT_SUMMARY.md  README.md  STRING_OPERATIONS_GUIDE.md  WEB_INTERFACE_UPDATE.md  docker-compose.yml  (+5 more)
test/: go.mod  test_crc.go
tools/modbus_poll_full/: comprehensive_example.go  rtu_example.go  tcp_example.go  test_auto.sh
tools/modbus_slave_full/: .gitignore  CONFIG_MANAGEMENT_GUIDE.md  Dockerfile  FILE_RECORDS_TEST_REPORT.md  QUICKSTART.md  QUICK_START.md  STRING_READ_GUIDE.md  config.example.yaml  demo_config_management.sh  demo_file_records.py  demo_string_autodecode.sh  docker-compose.yml  pyproject.toml  test_client.py  test_config_management.sh  test_string_operations.sh
tools/modbus_slave_full/docs/: installation.md
tools/modbus_slave_full/modbus_slave_full/: config.py  datastore.py
tools/modbus_slave_full/modbus_slave_full/protocol/: utils.py
tools/modbus_slave_full/modbus_slave_full/utils/: __init__.py  logger.py
tools/modbus_slave_full/modbus_slave_full/web/: __init__.py
tools/modbus_slave_full/modbus_slave_full/web/static/: app.js  index.html
(+17 files in other folders)
